; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/mISDN/extr_layer2.c_l2_st5_tei_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/mISDN/extr_layer2.c_l2_st5_tei_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.FsmInst = type { %struct.layer2* }
%struct.layer2 = type { i32, i32, i32 }

@GROUP_TEI = common dso_local global i32 0, align 4
@ST_L2_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.FsmInst*, i32, i8*)* @l2_st5_tei_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2_st5_tei_remove(%struct.FsmInst* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.FsmInst*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.layer2*, align 8
  store %struct.FsmInst* %0, %struct.FsmInst** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %9 = getelementptr inbounds %struct.FsmInst, %struct.FsmInst* %8, i32 0, i32 0
  %10 = load %struct.layer2*, %struct.layer2** %9, align 8
  store %struct.layer2* %10, %struct.layer2** %7, align 8
  %11 = load %struct.layer2*, %struct.layer2** %7, align 8
  %12 = getelementptr inbounds %struct.layer2, %struct.layer2* %11, i32 0, i32 2
  %13 = call i32 @skb_queue_purge(i32* %12)
  %14 = load %struct.layer2*, %struct.layer2** %7, align 8
  %15 = getelementptr inbounds %struct.layer2, %struct.layer2* %14, i32 0, i32 1
  %16 = call i32 @skb_queue_purge(i32* %15)
  %17 = load %struct.layer2*, %struct.layer2** %7, align 8
  %18 = call i32 @freewin(%struct.layer2* %17)
  %19 = load i32, i32* @GROUP_TEI, align 4
  %20 = load %struct.layer2*, %struct.layer2** %7, align 8
  %21 = getelementptr inbounds %struct.layer2, %struct.layer2* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load %struct.layer2*, %struct.layer2** %7, align 8
  %23 = call i32 @stop_t200(%struct.layer2* %22, i32 17)
  %24 = load %struct.layer2*, %struct.layer2** %7, align 8
  %25 = call i32 @st5_dl_release_l2l3(%struct.layer2* %24)
  %26 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %27 = load i32, i32* @ST_L2_1, align 4
  %28 = call i32 @mISDN_FsmChangeState(%struct.FsmInst* %26, i32 %27)
  ret void
}

declare dso_local i32 @skb_queue_purge(i32*) #1

declare dso_local i32 @freewin(%struct.layer2*) #1

declare dso_local i32 @stop_t200(%struct.layer2*, i32) #1

declare dso_local i32 @st5_dl_release_l2l3(%struct.layer2*) #1

declare dso_local i32 @mISDN_FsmChangeState(%struct.FsmInst*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
